@startuml gof_visitor

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Behavioral #11 - Visitor

interface Visitor {
    visit_concrete_element_A()
    visit_concrete_element_B()
}

class ConcreteVisitor1 {
    visit_concrete_element_A(ConcreteElementA)
    visit_concrete_element_B(ConcreteElementB)
}

class ConcreteVisitor2 {
    visit_concrete_element_A(ConcreteElementA)
    visit_concrete_element_B(ConcreteElementB)
}

Visitor <|.. ConcreteVisitor1
Visitor <|.. ConcreteVisitor2

interface Element {
    accept(Visitor)
}

Element --> Visitor

class ConcreteElementA {
    accept(Visitor)
    operation_A()
}

class ConcreteElementB {
    accept(Visitor)
    operation_B()
}

Element <|.. ConcreteElementA
Element <|.. ConcreteElementB

class ObjectStructure {
    elements
    attach(Element)
    detach(Element)
    accept(Visitor)
}

ObjectStructure --> Element

class Client

Client --> Visitor
Client --> ObjectStructure

@enduml
